--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@eser/functions": "npm:@jsr/eser__functions@^4.0.43",
     "@eser/shell": "npm:@jsr/eser__shell@^4.0.43",
     "@eser/writer": "npm:@jsr/eser__writer@^4.0.43",
+    "@resvg/resvg-js": "^2.6.2",
     "@std/assert": "npm:@jsr/std__assert@^1.0.13",
     "@std/testing": "npm:@jsr/std__testing@^1.0.14",
     "@tanstack/react-form": "^1.12.1",
     "@tanstack/react-router": "^1.149.3",
     "@tanstack/react-start": "^1.149.4",
+    "@xyflow/react": "^12.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "satori": "^0.12.2",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
